tests/neg/poly-fun.stk
fun foo[T <: {a: Int}](x: T): T = x.a  // error

fun bar[T](x: T): T = 3 // error

// Check that type inference of result type does not discard errors
fun main =
  val a = foo 10  // error

  foo {a = 20}

  val b = foo[{b: Int}] {b = 10} // error
